Afastei a mensagem da seção azul do cabeçalho, usei padding-top

--- a/semana2/bugfixes/index.css
+++ b/semana2/bugfixes/index.css
@@ -75,6 +75,10 @@ div img {
     padding: 15px 0px;
 }
 
+#container-de-descricao>p {
+    padding-top: 50px;
+}
+
 #container-para-comprar {
     background-color: #e7eb90;
 }
